# hydra

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Readme.md  hydra.lua  install-jansson.sh  plan.md  setup-travis.sh  wpm.json  wpm.json_
docs/: .gitignore  next.config.js  package.json  pnpm-lock.yaml  theme.config.jsx
docs/pages/: index.mdx
src/: CMakeLists.txt  check.rs  fileformat.c  fileformat.h  filepath.c  filepath.h  init.c  init.h  install.c  install.h  list.c  list.h  main.rs  process.c  process.h  settings.h  variables.c  variables.h  wpm.c
